# hr-dashboard

./: README.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
traffictech/: boot.py  crud_events.py  hooks.py  modules.txt  patches.txt  tasks.py  utils.py
traffictech/api/: auth.py  hrms.py  project.py  scanner.py
traffictech/api/mobile/: auth.py  expense.py  generic.py
traffictech/api/portal/: auth.py  hrms.py  utils.py
traffictech/fixtures/: custom_field.json
traffictech/overrides/: data_import.py  importer.py
traffictech/patches/: create_crm_fields.py  create_custom_fields.py  create_project_fields.py  create_property_setter.py  create_quote_fields.py  create_task_fields.py
traffictech/public/css/: scanner.bundle.css
traffictech/public/html/page/: hr_manager_dashboard.html
traffictech/public/js/: customer.js  employee.js  lead.js  opportunity.js  quotation.js  rejection_reason.js  task.js  task_list.js  user.js
traffictech/public/js/scanner/: App.jsx  main.jsx  scanner.bundle.js
traffictech/traffictech/dashboard_chart/department_wise_salary/: department_wise_salary.json
traffictech/traffictech/dashboard_chart/document_expiry_details/: document_expiry_details.json
traffictech/traffictech/dashboard_chart/employee_in_outside_country/: employee_in_outside_country.json
traffictech/traffictech/dashboard_chart/nationality_wise_employee/: nationality_wise_employee.json
traffictech/traffictech/dashboard_chart/vacation_return/: vacation_return.json
traffictech/traffictech/page/: utils.py
(+217 files in other folders)
