[project]
name = "traffictech"
authors = [
    { name = "Niyaz Razak", email = "niyasibnurazak@gmail.com"}
]
description = "Customization Traffictech"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openai",
    "numpy",
    "pytesseract~=0.3.13",
    "pdf2image~=1.17.0",
    "pypdfium2~=4.0.0",
    "opencv-python-headless",
    "pyproj",
    "tensorflow",
    "mtcnn",
    "opencv-python"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[deploy.dependencies.apt]
packages = [
    "tesseract-ocr",
    "libtesseract-dev",
    "ffmpeg",
]
